# PyDemineur

./: .coverage  .gitignore  LICENSE  Makefile  README.md  board.html  index.html  objects.inv  pydemineur.html  pyproject.toml  requirements.txt  search.html
.doctrees/: environment.pickle  index.doctree  pydemineur.doctree  utilities.doctree
.github/workflows/: ci.yml  documentation.yml
_modules/: actions.html  index.html
docs/: .buildinfo  actions.html  conf.py  genindex.html  index.rst  installation.rst  utilities.html
docs/_build/doctrees/: actions.doctree  board.doctree  environment.pickle  index.doctree  modules.doctree  utilities.doctree
docs/_build/html/: .buildinfo  actions.html  board.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pydemineur.html  search.html  searchindex.js  utilities.html
docs/_build/html/.doctrees/: actions.doctree  board.doctree  environment.pickle  index.doctree  pydemineur.doctree  utilities.doctree
docs/_build/html/_modules/: actions.html  board.html  index.html  utilities.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
docs/_modules/: actions.html  board.html
ghpage/: board.html  index.html  pydemineur.html  searchindex.js
ghpage/.doctrees/: board.doctree  environment.pickle  index.doctree  modules.doctree  utilities.doctree
ghpage/_modules/: index.html
ghpage/_sources/: index.rst.txt  pydemineur.rst.txt
src/: actions.py  board.py  pydemineur.py  utilities.py
tests/: test_actions.py  test_board.py  test_pydemineur.py  test_utilities.py
